--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -56,6 +56,7 @@
         </div>
         <button class="accordion">Dessert</button>
         <div class="panel">
+          <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a><br>
           <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a>
         </div>
         <button class="accordion">Italian</button>
@@ -63,11 +64,11 @@
           <a href="/recipes?recipe=Meatball%20Marinara&category=Italian">Meatball Marinara</a><br>
           <a href="/recipes?recipe=Pizza&category=Italian">Pizza</a>
         </div>
-        <button class="accordion">Meditteranean</button>
+        <button class="accordion">Mediterranean</button>
         <div class="panel">
-          <a href="/recipes?recipe=Moroccan%20Meatballs&category=Meditteranean">Moroccan Meatballs</a><br>
-          <a href="/recipes?recipe=Red%20Lamb&category=Meditteranean">Red Lamb</a><br>
-          <a href="/recipes?recipe=Roasted%20Cauliflower&category=Meditteranean">Roasted Cauliflower</a><br>
+          <a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a><br>
+          <a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a><br>
+          <a href="/recipes?recipe=Roasted%20Cauliflower&category=Mediterranean">Roasted Cauliflower</a><br>
         </div>
         <button class="accordion">Seafood</button>
         <div class="panel">
