Latest recipe on recipes page

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -17,22 +17,33 @@
       {% if recipe %}
         {{ recipe | safe }}
       {% else %}
-        <h4>Pumpkin Waffles</h4>
-        <h5><i class="fa fa-list-ul" aria-hidden="true"></i> Ingredients<h5>
-        <ul>
-          <li>1 egg</li>
-          <li>&frac14; cup pumpkin</li>
-          <li>&#x2154; cup whole wheat flour</li>
-          <li>1 tsp baking powder</li>
-          <li>1 tbsp pumkin pie spice</li>
-          <li>1 tbsp cooking oil</li>
-          <li>&#x2154; cup buttermilk</li>
-        </ul>
-        <h5><i class="fa fa-list-ol" aria-hidden="true"></i> Instructions<h5>
-        <p>Combine flour, oats, baking powder and spice in mixing bowl, push to side.
-           Add egg on edge, beat by itself, add oil and pumpkin, mix to blend, add half
-           of the buttermilk and blend. Mix together with flour mixture and remaining
-           buttermilk to proper consistancy. Do not overmix.</p>
+        <h4>Tacos with Guacamole</h4>
+<h5><i class="fa fa-list-ul" aria-hidden="true"></i> Ingredients</h5>
+<h5>Meat Crumbles</h5>
+<ul>
+  <li>1 lb ground turkey (85-93% lean)</li>
+  <li>2 tbsp olive oil</li>
+  <li>&#8531; cup onion, chopped)</li>
+  <li>1-2 garlic cloves, pressed</li>
+  <li>&frac14; tsp fresh ground black pepper</li>
+  <li>1 tsp Sambal Oelek or Chili Garlic Sauce</li>
+  <li>&frac12; tsp cumin</li>
+  <li>1 tsp oregano</li>
+  <li>1-2 tsp chili powder</li>
+  <li>1 tsp mesquite seasoning (optional)</li>
+</ul>
+<h5>Guacamole</h5>
+<ul>
+  <li>1 avocado</li>
+  <li>1 tbsp lemon or lime juice</li>
+  <li>2 tbsp Pace picante or other salsa</li>
+  <li>&frac14; tsp garlic salt</li>
+  <li>1 or 2 fresh tomatoes, diced</li>
+  <li>1 tbsp fresh cilantro, diced</li>
+</ul>
+<h5><i class="fa fa-tasks" aria-hidden="true"></i> Instructions</h5>
+<p>
+In a large sauce pan, saute onion in olive oil over low heat until translucent. Mix dry spices in mortar or small bowl. Add meat to pan and cook until browned, flipping and chopping to make crumbles. Add dry spices and mix thoroughly to coat meat crumbles. Add garlic and Sambal Oelek or Chili Garlic Sauce, turn off stove heat and mix thoroughly as the pan cools down. </p>
       {% endif %}
     </div><!--/col-sm-8-->
     <div class="col-sm-3 col-sm-offset-1">
@@ -69,6 +80,10 @@
           <a href="/recipes?recipe=Moroccan%20Meatballs&category=Mediterranean">Moroccan Meatballs</a><br>
           <a href="/recipes?recipe=Red%20Lamb&category=Mediterranean">Red Lamb</a><br>
           <a href="/recipes?recipe=Roasted%20Cauliflower&category=Mediterranean">Roasted Cauliflower</a><br>
+        </div>
+        <button class="accordion">Mexican</button>
+        <div class="panel">
+          <a href="/recipes?recipe=Tacos%20with%20Guacamole&category=Mexican">Tacos with Guacamole</a><br>
         </div>
         <button class="accordion">Seafood</button>
         <div class="panel">
