Thai Ginger Soyaki Salmon

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -90,7 +90,8 @@ In a large sauce pan, saute onion in olive oil over low heat until translucent. 
           <a href="/recipes?recipe=Grilled%20Salmon&category=Seafood">Grilled Salmon</a><br>
           <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp&category=Seafood">Chile Lime Shrimp</a><br>
           <a href="/recipes?recipe=Salmon%20Patties&category=Seafood">Salmon Patties</a><br>
-          <a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a>
+          <a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a><br>
+          <a href="/recipes?recipe=Thai%20Ginger%20Soyaki%20Salmon&category=Seafood">Thai Ginger Soyaki Salmon</a>
         </div>
         <button class="accordion">Vegetables</button>
         <div class="panel">
