Banana bread and poke

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -67,8 +67,9 @@ In a large sauce pan, saute onion in olive oil over low heat until translucent. 
         </div>
         <button class="accordion">Dessert</button>
         <div class="panel">
-          <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a><br>
-          <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a>
+          <a href="/recipes?recipe=Banana%20Bread&category=Dessert">Banana Bread</a><br>
+          <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a><br>
+          <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a>
         </div>
         <button class="accordion">Italian</button>
         <div class="panel">
@@ -89,6 +90,7 @@ In a large sauce pan, saute onion in olive oil over low heat until translucent. 
         <div class="panel">
           <a href="/recipes?recipe=Grilled%20Salmon&category=Seafood">Grilled Salmon</a><br>
           <a href="/recipes?recipe=Cilantro%20Chile%20Lime%20Shrimp&category=Seafood">Chile Lime Shrimp</a><br>
+          <a href="/recipes?recipe=Poke%20Bowl&category=Seafood">Poke Bowl</a><br>
           <a href="/recipes?recipe=Salmon%20Patties&category=Seafood">Salmon Patties</a><br>
           <a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a><br>
           <a href="/recipes?recipe=Thai%20Ginger%20Soyaki%20Salmon&category=Seafood">Thai Ginger Soyaki Salmon</a>
