--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
     <link href="{{url_for('static', filename='css/custom.css')}}" rel="stylesheet" media="screen">
     {% block css %}{% endblock %}
   </head>
-  <body>
+  <body onload="searchInit()">
 
     {% include "navigation.html" %}
 
