Recipe updates, saute, cilantro carrots

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -97,7 +97,8 @@ In a large sauce pan, saute onion in olive oil over low heat until translucent. 
         </div>
         <button class="accordion">Vegetables</button>
         <div class="panel">
-          <a href="/recipes?recipe=Asian%20Carrots&category=Vegetables">Asian Carrots</a><br>
+          <a href="/recipes?recipe=Ginger%20Carrots&category=Vegetables">Ginger Carrots</a><br>
+          <a href="/recipes?recipe=Spicy%20Cilantro%20Carrots&category=Vegetables">Spicy Cilantro Carrots</a><br>
           <a href="/recipes?recipe=Diced%20Potatoes&category=Vegetables">Diced Potatoes</a><br>
           <a href="/recipes?recipe=Sweet%20Potato%20Fries&category=Vegetables">Sweet Potato Fries</a>
         </div>
