Spicy pear and oven pancakes, revisions

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -57,7 +57,9 @@ In a large sauce pan, saute onion in olive oil over low heat until translucent. 
         </div>
         <button class="accordion">Breakfast</button>
         <div class="panel">
-          <a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">StrawberryPancakes</a><br>
+          <a href="/recipes?recipe=Oven%20Pancakes&category=Breakfast">Oven Pancakes</a><br>
+          <a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">Strawberry Pancakes</a><br>
+          <a href="/recipes?recipe=Spicy%20Pear%20Pancakes&category=Breakfast">Spicy Pear Pancakes</a><br>
           <a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Apricot Scones</a><br>
           <a href="/recipes?recipe=Buttermilk%20Waffles&category=Breakfast">Buttermilk Waffles</a><br>
           <a href="/recipes?recipe=Pumpkin%20Waffles&category=Breakfast">Pumpkin Waffles</a><br>
