Latest posts, click collapse

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -18,6 +18,11 @@
         }
     }
   }
+
+  $(document).on('click',function() {
+    $('.collapse').collapse('hide');
+  })
+
 </script>
 
 <div id="search" class="modal fade" role="dialog">
@@ -35,7 +40,9 @@
             <li><a href="/recipes?recipe=Sesame%20Chicken&category=Asian">Sesame Chicken</a></li>
             <li><a href="/recipes?recipe=Szechuan%20Chicken&category=Asian">Szechuan Chicken</a></li>
             <li><a href="/recipes?recipe=Korean%20Meatballs&category=Asian">Korean Meatballs</a></li>
-            <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">StrawberryPancakes</a></li>
+            <li><a href="/recipes?recipe=Strawberry%20Pancakes&category=Breakfast">Strawberry Pancakes</a></li>
+            <li><a href="/recipes?recipe=Oven%20Pancakes&category=Breakfast">Oven Pancakes</a></li>
+            <li><a href="/recipes?recipe=Spicy%20Pear%20Pancakes&category=Breakfast">Spicy Pear Pancakes</a></li>
             <li><a href="/recipes?recipe=Apricot%20Scones&category=Breakfast">Apricot Scones</a></li>
             <li><a href="/recipes?recipe=Buttermilk%20Waffles&category=Breakfast">Buttermilk Waffles</a></li>
             <li><a href="/recipes?recipe=Pumpkin%20Waffles&category=Breakfast">Pumpkin Waffles</a></li>
