--- a/templates/login.html
+++ b/templates/login.html
@@ -37,6 +37,7 @@
   <br/><br/>
   <p><a href="/register">Need to Sign up?</a></p>
   <p><a href="/forgot">Forgot your password?</a></p>
+  <input type=hidden value="{{ next or '' }}" name=next>
 </form>
 </div>
 
