--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 <h2>User Profile</h2>
-<p>{{ user.username }}</p>
-<p>{{ user.name }}</p>
-<p>{{ user.email }}</p>
+<p>{{ user.get_username() }}</p>
+<p>{{ user.get_name() }}</p>
+<p>
+  <i class="fa fa-envelope-o fa-fw"></i>
+  {{ user.get_email() }}</p>
 {% endblock %}
