--- a/templates/register.html
+++ b/templates/register.html
@@ -8,47 +8,19 @@
   {{ form.csrf_token }}
   <p>
   <i class="fa fa-user-o fa-fw"></i>
-  {{ form.username(placeholder="username") }}
-    <span class="error">
-      {% if form.username.errors %}
-        {% for error in form.username.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
+  {{ form.username(id="field_username", placeholder="Username or email", title="Username must be at least 4 characters and contain only letters, numbers and underscores." ) }}
   </p>
   <p>
   <i class="fa fa-envelope-o fa-fw"></i>
   {{ form.email(placeholder="Email addess") }}
-    <span class="error">
-      {% if form.email.errors %}
-        {% for error in form.email.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
   {{ form.password(placeholder="Password") }}
-    <span class="error">
-      {% if form.password.errors %}
-        {% for error in form.password.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
   {{ form.confirm(placeholder="Confirm password") }}
-    <span class="error">
-      {% if form.confirm.errors %}
-        {% for error in form.confirm.errors %}
-          {{ error }}
-        {% endfor %}
-      {% endif %}
-    </span>
   </p>
   <button class="btn btn-primary" type="submit"><i class="fa fa-user" aria-hidden="true"></i>&nbsp;&nbsp;Sign Up</button>
   <br><br>
