More profile info

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,13 +3,14 @@
 {% block content %}
 
 <h2>User Profile</h2>
-<p>
-  <i class="fa fa-user-o fa-fw"></i>
-  {{ user.get_username() }}</p>
-<p>
-  <i class="fa fa-user-secret fa-fw"></i>
-  {{ user.get_name() }}</p>
-<p>
-  <i class="fa fa-envelope-o fa-fw"></i>
-  {{ user.get_email() }}</p>
+<table>
+{% for key, value in account.iteritems() %}
+  <tr>
+    {% if key != 'mcf' and key != 'shared_secret' %}
+      <th> {{ key }} </th>
+      <td> {{ value }} </td>
+    {% endif %}
+   </tr>
+{% endfor %}
+</table>
 {% endblock %}
