--- a/templates/login.html
+++ b/templates/login.html
@@ -4,15 +4,16 @@
 
 <div class="container">
 <form id="login_form" class="form-signin" role="form" method="POST" action="">
+  <center>
   <h3 class="form-signin-heading">Log In</h3>
   {{ form.csrf_token }}
   <p>
   <i class="fa fa-envelope-o fa-fw"></i>
-  {{ form.username(id="field_username", placeholder="Username or email") }}
+  {{ form.username(id="username", placeholder="Username or email") }}
   </p>
   <p>
   <i class="fa fa-key fa-fw"></i>
-  {{ form.password(id="field_password", placeholder="Password") }}
+  {{ form.password(id="password", title="Password must contain at least 6 characters, including UPPER/lowercase and numbers.", placeholder="New password", pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}") }}
   </p>
   <p>
   <div class="checkbox">
@@ -24,6 +25,7 @@
   <p><a href="/register">Need to Sign up?</a></p>
   <p><a href="/forgot">Forgot your password?</a></p>
   <input type=hidden value="{{ next or '' }}" name=next>
+  </center>
 </form>
 </div>
 
