--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -87,8 +87,8 @@
     </div>
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="nav navbar-nav">
-        <li><a class="nav-item nav-link" href="{{url_for('recipes')}}"><i class="fa fa-spoon" aria-hidden="true"></i>&nbsp;Recipes</a></li>
-        <li><a class="nav-item nav-link" href="{{url_for('messages')}}"><i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;Messages</a></li>
+        <li><a class="nav-item nav-link" href="{{url_for('recipes')}}"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;Recipes</a></li>
+        <li><a class="nav-item nav-link" href="{{url_for('messages')}}"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;Messages</a></li>
         <li><a class="nav-item nav-link" href="{{url_for('vault')}}"><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;Vault</a></li>
         <li><a class="nav-item nav-link" data-toggle="modal" href="#search"><i class="fa fa-search" aria-hidden="true"></i>&nbsp;Search</a></li>
       </ul>
