Sauteed spinach, add items to search

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -64,7 +64,11 @@
             <li><a href="/recipes?recipe=Salmon%20Patties&category=Seafood">Salmon Patties</a></li>
             <li><a href="/recipes?recipe=Thai%20Baked%20Salmon&category=Seafood">Thai Baked Salmon</a></li>
             <li><a href="/recipes?recipe=Thai%20Ginger%20Soyaki%20Salmon&category=Seafood">Thai Ginger Soyaki Salmon</a></li>
-            <li><a href="/recipes?recipe=Asian%20Carrots&category=Vegetables">Asian Carrots</a></li>
+            <li><a href="/recipes?recipe=Ginger%20Carrots&category=Vegetables">Ginger Carrots</a></li>
+            <li><a href="/recipes?recipe=Spicy%20Cilantro%20Carrots&category=Vegetables">Spicy Cilantro Carrots</a></li>
+            <li><a href="/recipes?recipe=Sesame%20Green%20Beans&category=Vegetables">Sesame Green Beans</a></li>
+            <li><a href="/recipes?recipe=Sauteed%20Spinach&category=Vegetables">Sauteed Spinach</a></li>
+            <li><a href="/recipes?recipe=Spicy%20Green%20Beans&category=Vegetables">Spicy Green Beans</a></li>
             <li><a href="/recipes?recipe=Diced%20Potatoes&category=Vegetables">Diced Potatoes</a></li>
             <li><a href="/recipes?recipe=Sweet%20Potato%20Fries&category=Vegetables">Sweet Potato Fries</a></li>
           </ul>
