--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -49,7 +49,8 @@
             <li><a href="/recipes?recipe=Banana%20Muffins&category=Breakfast">Banana Muffins</a></li>
             <li><a href="/recipes?recipe=Pumpkin%20Muffins&category=Breakfast">Pumpkin Muffins</a></li>
             <li><a href="/recipes?recipe=Turkey%20Sausage&category=Breakfast">Turkey Sausage</a></li>
-            <li><a href="/recipes?recipe=Banana%20Bread&category=Dessert">Banana Bread</a></li>
+            <li><a href="/recipes?recipe=Banana%20Bread&category=Bread">Banana Bread</a></li>
+            <li><a href="/recipes?recipe=Anadama%20Bread&category=Bread">Anadama Bread</a></li>
             <li><a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a></li>
             <li><a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a></li>
             <li><a href="/recipes?recipe=Meatball%20Marinara&category=Italian">Meatball Marinara</a></li>
