--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -33,6 +33,11 @@
           <a href="/recipes?recipe=Szechuan%20Chicken&category=Asian">Szechuan Chicken</a><br>
           <a href="/recipes?recipe=Korean%20Meatballs&category=Asian">Korean Meatballs</a>
         </div>
+        <button class="accordion">Bread</button>
+        <div class="panel">
+          <a href="/recipes?recipe=Anadama%20Bread&category=Bread">Anadama Bread</a><br>
+          <a href="/recipes?recipe=Banana%20Bread&category=Bread">Banana Bread</a><br>
+        </div>
         <button class="accordion">Breakfast</button>
         <div class="panel">
           <a href="/recipes?recipe=Oven%20Pancakes&category=Breakfast">Oven Pancakes</a><br>
@@ -47,7 +52,6 @@
         </div>
         <button class="accordion">Dessert</button>
         <div class="panel">
-          <a href="/recipes?recipe=Banana%20Bread&category=Dessert">Banana Bread</a><br>
           <a href="/recipes?recipe=Swedish%20Pancakes&category=Dessert">Crepes</a><br>
           <a href="/recipes?recipe=Fudge%20Brownies&category=Dessert">Fudge Brownies</a>
         </div>
