Pinterest save button

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,8 @@
   <meta property="twitter:account_id" content="4503599627902758" />
   <title>Frosty Web</title>
     <!-- meta -->
-    <meta property="og:url" content="https://example.com">
+    <meta property="og:url" content="https://cyberfrosty.com">
+    <meta property="og:type" content="website">
     <meta property="og:site_name" content="Frosty">
     <meta property="og:title" content="Frosty">
     <meta property="og:description" content="Frost family recipes">
@@ -77,6 +78,7 @@
 
     <script src="{{url_for('static', filename='js/forge.min.js')}}" type="text/javascript"></script>
     <script src="{{url_for('static', filename='js/main.js')}}" type="text/javascript"></script>
+    <script async defer data-pin-hover="true" data-pin-round="true" data-pin-tall="true" src="//assets.pinterest.com/js/pinit.js"></script>
     {% block js %}{% endblock %}
 
   </body>
