--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" itemscope itemtype="http://schema.org/Recipe">
   <div class="page-header">
-    <h3>
+    <h3 itemprop="name">
     {% if category %}
       {{ category | safe }}
     {% else %}
