Add chef, yield, times

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,16 +13,16 @@
     <!-- meta -->
     <meta property="og:url" content="https://cyberfrosty.com">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Frosty">
-    <meta property="og:title" content="Frosty">
-    <meta property="og:description" content="Frost family recipes">
+    <meta property="og:site_name" content="Frosty Web">
+    <meta property="og:title" content="Frosty Web">
+    <meta property="og:description" content="Frost family recipes and shared content">
     <meta property="og:image" content="static/img/logo.png">
     <meta property="twitter:site:id" content="13334762">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Frosty">
-    <meta property="twitter:description" content="Frost family recipes">
+    <meta property="twitter:title" content="Frosty Web">
+    <meta property="twitter:description" content="Frost family recipes and shared content">
     <meta property="twitter:image:src" content="static/img/logo.png">
-    <meta name="description" content="Frost family recipes">
+    <meta name="description" content="Frost family recipes and shared content">
     <meta name="author" content="Alan Frost">
     <link rel="shortcut icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
     <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='img/favicon.ico')}}" />
